--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "port": 456,
     "address": "test@test.com",
     "password": "test password",
-    "addressTo": "test_to@test.com"
+    "addressTo": "test_to@test.com",
+    "subjectPrefix": "Дайджест"
   }
 }
